syntax = "proto3";
package place;
option go_package = "place";

message RequestEmpty {}

message Gastronomie {
  // @inject_tag: bson:"name,omitempty"
  string name = 1; 
}

message Coordinate {
  // @inject_tag: bson:"lng,omitempty"
  float lng = 1;
  // @inject_tag: bson:"lat,omitempty"
  float lat = 2;
}

message Picture {
  // @inject_tag: bson:"src,omitempty"
  string src = 1; 
}

message Schedule {
  // @inject_tag: bson:"date,omitempty"
  string date = 1;
  // @inject_tag: bson:"start_am,omitempty"
  string start_am = 2;
  // @inject_tag: bson:"end_am,omitempty"
  string end_am = 3;
  // @inject_tag: bson:"start_pm,omitempty"
  string start_pm = 4;
  // @inject_tag: bson:"end_pm,omitempty"
  string end_pm = 5;
}

message Services {
  // @inject_tag: bson:"name,omitempty"
  string name = 1;
}

message Location {
  // @inject_tag: bson:"address,omitempty"
  string address = 1;
  // @inject_tag: bson:"cpc,omitempty"
  string cpc = 2;
  // @inject_tag: bson:"zone,omitempty"
  string zone = 3;
  // @inject_tag: bson:"coordinate,omitempty"
  Coordinate coordinate = 4;
}

message Place {
  // @inject_tag: bson:"id,omitempty"
  string id = 1;
  // @inject_tag: bson:"name,omitempty"
  string name = 2;
  // @inject_tag: bson:"logo,omitempty"
  string logo = 3;
  // @inject_tag: bson:"phone,omitempty"
  string phone = 4;
  // @inject_tag: bson:"email,omitempty"
  string email = 5;
  // @inject_tag: bson:"description,omitempty"
  string description = 6;
  // @inject_tag: bson:"gastronomie,omitempty"
  repeated string gastronomie = 7;
  // @inject_tag: bson:"location,omitempty"
  Location location = 8;
  // @inject_tag: bson:"likes,omitempty"
  int32 likes = 11;
  // @inject_tag: bson:"notation,omitempty"
  int32 notation = 12;
  // @inject_tag: bson:"schedule,omitempty"
  repeated Schedule schedule = 16;
  // @inject_tag: bson:"travel_time,omitempty"
  int32 travel_time = 18;
  // @inject_tag: bson:"ocean_near,omitempty"
  bool ocean_near = 19;
  // @inject_tag: bson:"services,omitempty"
  Services services = 20;
  // @inject_tag: bson:"temporaly_place,omitempty"
  bool temporaly_place = 21;
  // @inject_tag: bson:"categories,omitempty"
  repeated string categories = 22;
}

message Gallery {
  // @inject_tag: bson:"main,omitempty"
  int32 main = 1;
  // @inject_tag: bson:"pictures,omitempty"
  repeated Picture pictures = 2; 
}

message ListResponse {
  int32 status = 1;
  string error = 2;
  int64 total = 3;
  repeated Place data = 4;
}

message CreateResponse {
  int32 status = 1;
  string id = 2;
  string error = 3;
}

message DeleteResponse {
  int32 status = 1;
  string error = 2;
}

message UpdateResponse {
  int32 status = 1;
  string error = 2;
}

message DetailResponse {
  int32 status = 1;
  string error = 2;
  Place data = 4;
}

message SearchRequest {
  string q = 1;
  int32 from = 2;
  int32 to = 3;
}

service PlaceService {
  rpc Search(SearchRequest) returns (ListResponse);
  rpc GetDetail(ID) returns (DetailResponse);
  rpc AddPlace(Place) returns (CreateResponse);
  rpc UpdatePlace(Place) returns (UpdateResponse);
  rpc DeletePlace(ID) returns (DeleteResponse);
}